# z2m-hub

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  z2m-hub.toml
docs/code-truth/: ARCHITECTURE.md  DECISIONS.md  REPO_OVERVIEW.md
lat.md/: architecture.md  automations.md  constraints.md  dhw.md  infrastructure.md  interfaces.md  lat.md  postgres-migration.md  tests.md  tsdb-migration.md
src/: main.rs
