[package]
name = "z2m-hub"
version = "0.1.0"
edition = "2021"
description = "Zigbee2MQTT automation hub and SPA server"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
